# TempoCompiler

./: CMakeLists.txt  README.md
include/Lexer/: AST.h  Lexer.h  Token.h
include/utility/: TLogger.h
src/Lexer/: AST.h  Lexer.cpp  Lexer.h  Token.h
test/: CMakeLists.txt  main.cpp
test/Lexer/: TestLexer.cpp
test/resources/: test.tempo
