set(PROJECT_NAME_TEST ${CMAKE_PROJECT_NAME}Test)

file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.cpp)

add_executable(${PROJECT_NAME_TEST} ${TEST_SOURCES})

include_directories(${CMAKE_BINARY_DIR}/../vendor/googletest/)

set(BUILD_PATH "${CMAKE_CURRENT_SOURCE_DIR}/bin/${PLATFORM}/${CMAKE_BUILD_TYPE}/${TARGET}")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BUILD_PATH})

target_link_libraries(${PROJECT_NAME_TEST}
        PUBLIC
        ${CMAKE_PROJECT_NAME}Lib
        gtest)

add_test(NAME ${PROJECT_NAME_TEST} COMMAND $<TARGET_FILE:${PROJECT_NAME_TEST}>)
