set(PROJECT_NAME_TEST ${CMAKE_PROJECT_NAME}Test)

file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.cpp)

add_executable(${PROJECT_NAME_TEST} ${TEST_SOURCES})

include_directories(${CMAKE_BINARY_DIR}/../vendor/googletest/)

set(BUILD_PATH "${CMAKE_CURRENT_SOURCE_DIR}/bin/${PLATFORM}/${CMAKE_BUILD_TYPE}/${TARGET}")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BUILD_PATH})

set(CMAKE_CXX_FLAGS_DEBUG
        "/DWIN32 /D_WINDOWS /EHsc /WX /wd4355 /wd4251 /wd4250 /wd4996"
        CACHE STRING "Debug compiler flags" FORCE
        )
target_link_libraries(${PROJECT_NAME_TEST}
        PUBLIC
        ${CMAKE_PROJECT_NAME}Lib
        gtest)

add_test(NAME ${PROJECT_NAME_TEST} COMMAND $<TARGET_FILE:${PROJECT_NAME_TEST}>)

add_custom_command(TARGET ${PROJECT_NAME_TEST} POST_BUILD COMMAND  ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/assets ${CMAKE_CURRENT_SOURCE_DIR}/../bin/${PLATFORM}/${CMAKE_BUILD_TYPE}/${TARGET}/assets)
